--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <div class="logo-title">
             <img src="1.png" alt="Logo de la aplicación">
-            <h1>STUDLIE</h1>
+            <h1>STUDie</h1>
         </div>
     </header>
     <main>
