--- a/webapp.html
+++ b/webapp.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>StudEasy</title>
     <link rel="stylesheet" href="stylewebapp.css">
 </head>
 <body>
-    <h1>StudEasy</h1>
-
+    <header>
+    <div class="logo-title">
+        <img src="1.png" alt="Logo de la aplicación">
+        <h1>StudEasy</h1>
+    </div>
+</header>
     <!-- Resultado Final -->
     <div>
-        <h3>Resultat <span id="final-score">0</span>/20</h3>
+        <h3>Resultat <span id="final-score">0</span></h3>
     </div>
     <div id="progress-bar" style="height: 20px; width: 0%; background-color: green;"></div>
 
