--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         
         <section id="app-link">
             <h2>Essayez maintenant</h2>
-            <a href="webapp.html" class="butBody">Telecharger gratuitement</a>
+            <a href="app.html" class="butBody">Telecharger gratuitement</a>
         </section>
         
         <section id="faq">
