--- a/app.html
+++ b/app.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etudly - Votre assistant d'études</title>
-    <link rel="stylesheet" href="stylewebapp.css">
+    <link rel="stylesheet" href="app.css">
     
     <!-- Meta para Google Sign-In -->
     <meta name="google-signin-client_id" content="157181619799-7bh6g4fkc1ft81m2tr09dec60cn2sktf.apps.googleusercontent.com">
@@ -338,6 +338,6 @@
     <!-- Scripts de l'application -->
     <script src="firestore.js"></script>
     <script src="auth.js"></script>
-    <script src="scriptwebapp.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
