webpage 100 + sidebar upgrade

--- a/home.html
+++ b/home.html
@@ -13,12 +13,12 @@
     <div class="container">
         <aside class="sidebar">
             <div class="logo-container">
-                <img src="3.png" alt="Logo Etudly">
+                <img src="1.png" alt="Logo Etudly">
                 <h1>Etudly</h1>
             </div>
             <nav>
                 <ul>
-                    <li class="active"><a href="sidebar-home.html">Accueil</a></li>
+                    <li class="active"><a href="home.html">Accueil</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="presskit.html">Press Kit</a></li>
                     <li class="has-submenu">
