--- a/privacy.html
+++ b/privacy.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li><a href="presskit.html">Press Kit</a></li>
                     <li class="has-submenu active">
@@ -140,7 +140,7 @@
                                 <li><strong>Droit d'opposition</strong> : vous opposer au traitement de vos données</li>
                                 <li><strong>Droit à la portabilité</strong> : recevoir vos données dans un format réutilisable</li>
                             </ul>
-                            <p>Pour exercer ces droits, contactez-nous à privacy@etudly.com. Nous traiterons votre demande dans un délai d'un mois.</p>
+                            <p>Pour exercer ces droits, contactez-nous à <contact class="etudly"></contact>@etudly.com. Nous traiterons votre demande dans un délai d'un mois.</p>
                         </div>
                         
                         <div class="legal-section">
