--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li class="active"><a href="contact.html">Contact</a></li>
                     <li><a href="presskit.html">Press Kit</a></li>
                     <li class="has-submenu">
