--- a/presskit.html
+++ b/presskit.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="home.html">Accueil</a></li>
+                    <li><a href="index.html">Accueil</a></li>
                     <li><a href="contact.html">Contact</a></li>
                     <li class="active"><a href="presskit.html">Press Kit</a></li>
                     <li class="has-submenu">
