--- a/app.html
+++ b/app.html
@@ -117,7 +117,7 @@
                             <path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"></path>
                             <path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"></path>
                         </svg>
-                        Plan d'Études
+                        Plan d'Étudess
                     </a>
                 </li>
             </ul>
