--- a/app.html
+++ b/app.html
@@ -337,6 +337,7 @@
     
     <!-- Scripts de l'application -->
     <script src="firestore.js"></script>
+    <script src="auth-manager.js"></script>
     <script src="auth.js"></script>
     <script src="app.js"></script>
 </body>
