--- a/study-plan.html
+++ b/study-plan.html
@@ -246,6 +246,7 @@
     
     <!-- Scripts de l'application -->
     <script src="firestore.js"></script>
+    <script src="auth-manager.js"></script>
     <script src="auth.js"></script>
     <script src="study-plan.js"></script>
 </body>
