--- a/app.html
+++ b/app.html
@@ -372,6 +372,11 @@
         });
       </script>
     
+    <!-- Core modules -->
+    <script src="src/core/state.js"></script>
+    <script src="src/core/grading-utils.js"></script>
+    <script src="src/shared/grading-scale-ui.js"></script>
+
     <!-- Scripts de l'application -->
     <script src="firestore.js"></script>
     <script src="auth-manager.js"></script>
